Chronicles of Darkness/CofD.css
/* ... */
.sheet-skills {
    display: inline-grid;
    grid-template-columns: 1fr auto;
}

.sheet-skills > .sheet-section-header,
.sheet-skills > .sheet-subheader,
.sheet-skills > .sheet-subsubheader {
    grid-column: 1 / span 2;
}

.sheet-attributes {
    display: grid;
    grid-template-areas:
        "category . mental mental . physical physical . social social"
        "category . mental mental . physical physical . social social"
        "category . mental mental . physical physical . social social";
    grid-template-columns: 1fr 6px repeat(2, 1fr) 6px repeat(2, 1fr) 6px repeat(2, 1fr);
    font-weight: bold;
}

.sheet-attributes > * {
    padding: 0 4px;
}

.sheet-attributes > .sheet-mental.sheet-border {
    grid-area: mental;
}

.sheet-attributes > .sheet-physical.sheet-border {
    grid-area: physical;
}

.sheet-attributes > .sheet-social.sheet-border {
    grid-area: social;
}

.sheet-attributes > .sheet-border {
    border: 1px solid black;
}

.sheet-attributes > .sheet-power {
    grid-row: 1;
}

.sheet-attributes > .sheet-finesse {
    grid-row: 2;
}

.sheet-attributes > .sheet-resistance {
    grid-row: 3;
}

.sheet-attributes > .sheet-attributes-category {
    grid-column: category;
    text-align: right;
}

.sheet-attributes > .sheet-mental.sheet-label {
    grid-column-start: mental-start;
}

.sheet-attributes > .sheet-mental.sheet-dots {
    grid-column-end: mental-end;
}

.sheet-attributes > .sheet-physical.sheet-label {
    grid-column-start: physical-start;
}

.sheet-attributes > .sheet-physical.sheet-dots {
    grid-column-end: physical-end;
}

.sheet-attributes > .sheet-social.sheet-label {
    grid-column-start: social-start;
}

.sheet-attributes > .sheet-social.sheet-dots {
    grid-column-end: social-end;
}

.sheet-dots,
.sheet-healthboxes,
.sheet-checkboxes {
    display: flex;
    justify-content: center;
    align-items: center;
}

.sheet-checkboxes.sheet-left {
    justify-content: start;
}

/* Styles common to dot, checkbox, healthbox, and radio */
button.sheet-dot,
.sheet-checkbox > input[type="hidden"] + button,
.sheet-healthbox > button,
input.sheet-flag + button.sheet-radio {
    width: 10px;
    height: 10px;
    padding: 0;
    border: solid 1px #000000;
    vertical-align: middle;

    background: #efefef;
}

/* Styles unique to dot or radio */
button.sheet-dot,
input.sheet-flag + button.sheet-radio {
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
}

/* Selected radio */
input.sheet-flag[value="1"] + button.sheet-radio {
    background: radial-gradient(circle, currentColor 40%, #efefef 50%);
}

/* Active dot */
input[type="hidden"][value="1"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-1),
input[type="hidden"][value="2"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-2),
input[type="hidden"][value="3"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-3),
input[type="hidden"][value="4"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-4),
input[type="hidden"][value="5"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-5),
input[type="hidden"][value="6"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-6),
input[type="hidden"][value="7"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-7),
input[type="hidden"][value="8"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-8),
input[type="hidden"][value="9"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-9),
input[type="hidden"][value="10"] ~ button.sheet-dot:not(.sheet-zero):not(.sheet-ne-10) {
    background: currentColor;
}

button.sheet-zero
{
    opacity: 0;
}

button.sheet-zero:hover {
    opacity: 0.25;
}

.sheet-rolltemplate-wod table,
.sheet-rolltemplate-wod-attack table,
.sheet-rolltemplate-wod-simple table,
.sheet-rolltemplate-wod-3part table,
.sheet-rolltemplate-wod-initiative table
{
    width: 189px;
    height: 100%;
    background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Chronicles%20of%20Darkness/images/roll.jpg) no-repeat top left;
    background-size: 189px 100%;
    font-family: "Courier New", Courier, monospace;
    font-weight: bold;
    border-spacing: 0;
}

.sheet-rolltemplate-wod th,
.sheet-rolltemplate-wod-attack th,
.sheet-rolltemplate-wod-simple th,
.sheet-rolltemplate-wod-3part th,
.sheet-rolltemplate-wod-initiative th
{
    color: rgb(112, 0, 0);
    padding: 20px 20px 2px 20px;
    line-height: 1.2em;
    font-size: 1.2em;
    text-align: left;
}


.sheet-rolltemplate-wod td,
.sheet-rolltemplate-wod-attack td,
.sheet-rolltemplate-wod-simple td,
.sheet-rolltemplate-wod-3part td ,
.sheet-rolltemplate-wod-initiative td
{
    padding: 2px 20px 2px 20px;
    font-size: 1.0em;
    vertical-align: top;
}

.sheet-rolltemplate-wod .sheet-result,
.sheet-rolltemplate-wod-attack .sheet-result,
.sheet-rolltemplate-wod-simple .sheet-result,
.sheet-rolltemplate-wod-3part .sheet-result ,
.sheet-rolltemplate-wod-initiative .sheet-result
{
    font-size: 1.2em;
    text-align: center;
    color: rgb(112, 0, 0);
    padding: 2px 20px 2px 20px;
}


.sheet-rolltemplate-wod .inlinerollresult,
.sheet-rolltemplate-wod-attack .sheet-result .inlinerollresult,
.sheet-rolltemplate-wod-simple .inlinerollresult,
.sheet-rolltemplate-wod-3part .inlinerollresult,
.sheet-rolltemplate-wod-initiative .inlinerollresult
{
    background-color: transparent;
    color: #000000;
    border: none;
}

.sheet-rolltemplate-wod-attack .inlinerollresult
 {
    background-color: transparent;
    color: #000000;
    border: none;
    font-size: 1em;
    padding: 0px;
}

.sheet-rolltemplate-wod .inlinerollresult.fullcrit,
.sheet-rolltemplate-wod-attack .sheet-result .inlinerollresult.fullcrit,
.sheet-rolltemplate-wod-simple .inlinerollresult.fullcrit,
.sheet-rolltemplate-wod-3part .inlinerollresult.fullcrit,
.sheet-rolltemplate-wod-initiative .inlinerollresult.fullcrit
{
    color: #000000;
    border: none;
}
/* ... */

